--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,43 +11,29 @@ jobs:
   # build-and-deploy 为任务的ID
   build-and-deploy:
     # 运行所需要的环境
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-        # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
-        fetch-depth: 0
+      # 步骤名
+      - name: Checkout
+        # 使用的actions脚本，这里是官方提供的获取源码脚本
+        uses: actions/checkout@v3
 
-          - name: Setup pnpm
-            uses: pnpm/action-setup@v2
-            with:
-              # 选择要使用的 pnpm 版本
-              version: 7
-              # 使用 pnpm 安装依赖
-              run_install: true
-
-          - name: Setup Node.js
-            uses: actions/setup-node@v3
-            with:
-              # 选择要使用的 node 版本
-              node-version: 18
-              # 缓存 pnpm 依赖
-              cache: pnpm
-
-          # 运行构建脚本
-          - name: Build VuePress site
-            run: pnpm docs:build
+      # 执行npm脚本打包项目
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build
       
       # 执行crazy-max/ghaction-github-pages将项目发布到Github Pages
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v3
         with:
-          # 发布到的分支
+   # 发布到的分支
           target_branch: gh-pages
-          # 发布到的目录
+   # 发布到的目录
           build_dir: docs/.vuepress/dist
         env:
-          # 关联的token，这里填写之前创建的action变量
+  # 关联的token，这里填写之前创建的action变量
           GITHUB_TOKEN: ${{ secrets.VUETOKEN }}
