--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,29 @@ jobs:
       - name: Checkout
         # 使用的actions脚本，这里是官方提供的获取源码脚本
         uses: actions/checkout@v3
+        with:
+          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
+          fetch-depth: 0
 
-      # 执行npm脚本打包项目
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          # 选择要使用的 pnpm 版本
+          version: 7
+          # 使用 pnpm 安装依赖
+          run_install: true
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          # 选择要使用的 node 版本
+          node-version: 18
+          # 缓存 pnpm 依赖
+          cache: pnpm
+
+      # 运行构建脚本
+      - name: Build VuePress site
+        run: pnpm docs:build
       
       # 执行crazy-max/ghaction-github-pages将项目发布到Github Pages
       - name: Deploy to GitHub Pages
