--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider & vuepress build docs"
   },
   "repository": {
     "type": "git",
