--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16-nightly
+          node-version: 16.15.1
 
       # 执行npm脚本打包项目
       - name: Install and Build
