--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,14 @@ jobs:
           node-version: 16.15.1
 
       # 执行npm脚本打包项目
-      - name: Install and Build
+      - name: update-browserslist
+        run: |
+          npx update-browserslist-db@latest
+      - name: Install
         run: |
           npm install
-          npx update-browserslist-db@latest
+      - name: Build
+        run: |
           npm run build
       
       # 执行crazy-max/ghaction-github-pages将项目发布到Github Pages
